# chipmunk

./: .gitignore  .gitmodules  .rubocop.yml  .travis.yml  404.html  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE.txt  README.md  changelog.md  contribution.md  index.html  justfile  mkdocs.yml  new_bug_template.md  rake-extensions.rb  rake-package-json.rb  rake-plugins.rb  rake_extensions.rb  rakefile.rb  sitemap.xml  test.txt  text.txt  versions.json
application/apps/indexer/: .gitignore  AGENTS.md  Cargo.toml  README.md  chipmunk.json  logical.md  rakefile.rb  rustfmt.toml
application/apps/indexer/addon/: Cargo.toml
application/apps/indexer/components/: Cargo.toml
application/apps/indexer/definitions/: Cargo.toml
application/apps/indexer/descriptor/: Cargo.toml
application/apps/indexer/dlt/: Cargo.toml
application/apps/indexer/docs/: plugins.md  producer-plugins.drawio  producer.md
application/apps/indexer/indexer_base/: Cargo.toml
application/apps/indexer/indexer_cli/: Cargo.toml  log4rs.yaml  test.xml
application/apps/indexer/indexer_server/: Cargo.toml
application/apps/indexer/matcher/: Cargo.toml
application/apps/indexer/matching/: Cargo.toml
application/apps/indexer/mcp/: Cargo.toml
application/apps/indexer/merging/: Cargo.toml
application/apps/indexer/parsers/: Cargo.toml
application/apps/indexer/plugins/: Cargo.toml
application/apps/indexer/plugins_api/: Cargo.toml  build.rs  open_docs.sh  run_tests.sh
application/apps/indexer/plugins_host/: Cargo.toml
application/apps/indexer/processor/: .gitignore  Cargo.toml
application/apps/indexer/proptest-regressions/: dlt_parse.txt  parse.txt
application/apps/indexer/register/: Cargo.toml
application/apps/indexer/session/: Cargo.toml
application/apps/indexer/sources/: Cargo.toml
application/apps/indexer/stypes/: Cargo.toml  generate.sh
application/apps/indexer/text_grep/: README.md
application/apps/protocol/: .gitignore  AGENTS.md  Cargo.toml  binding.fbs  gen.sh  readme.md  test.sh
application/apps/protocol/binding/: attachment.fbs  common.fbs  error_computation.fbs  error_native.fbs  event.fbs  grabbed_el.fbs  index.fbs  (+2 more)
application/apps/text_grep/: Cargo.toml
cli/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  index.html  package.json
cli/chipmunk/: Cargo.toml  README.md
cli/chipmunk-cli/: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md
cli/chipmunk-cli/src/: lib.rs  main.rs
cli/codesign_config/: macos.toml
cli/config/: bench_core.toml  codesign_macos.toml
cli/development/: CHANGELOG.md  README.md
cli/development-cli/: .dockerignore  CHANGELOG.md  Cargo.toml  README.md
cli/development-cli/config/: bench_core.toml  codesign_macos.toml  min_versions.toml
cli/development-cli/dir_checksum/: Cargo.toml
cli/development-cli/integration_tests/: bench.py  build.py  clean.py  environment.py  lint.py  release.py  run_all.py  utls.py
cli/development-cli/src/: build_state_records.rs  chipmunk_runner.rs  cli_args.rs  dev_tools.rs  fstools.rs  location.rs  main.rs  print_dot.rs  shell.rs  spawner.rs  tracker.rs  user_config.rs  version.rs
cli/development/dir_checksum/: Cargo.toml
cli/development/integration_tests/: build.py  clean.py  run_all.py  shell_compl.py  test_cmd.py  utls.py
cli/development/src/: dev_environment.rs  location.rs  version.rs
cli/dir_checksum/: Cargo.toml
cli/dir_checksum/src/: file_hash_digest.rs  hash_digest.rs  hash_error.rs  input.rs  lib.rs
cli/dir_checksum/tests/: integration_tests.rs
cli/integration_tests/: build.py  clean.py  environment.py  lint.py  print_dot.py  run_all.py  shell_compl.py  test.py  user_config.py  utls.py
cli/src/: app_runner.rs  build_state.rs  build_state_records.rs  check_env.rs  checksum_records.rs  chipmunk_runner.rs  cli_args.rs  dev_environment.rs  dev_tools.rs  fail_fast.rs  fstools.rs  job_type.rs  location.rs  log_print.rs  main.rs  node_cmd.rs  print_dot.rs  shell.rs  shell_completion.rs  spawner.rs  target.rs  tools.rs  tracker.rs  user_config.rs  version.rs
cli/src/benchmark/: core.rs  mod.rs
cli/src/jobs_runner/: additional_features.rs  cancellation.rs  job_definition.rs  jobs_resolver.rs  jobs_state.rs  mod.rs
cli/src/modules/: app.rs  binding.rs  cli.rs  client.rs  core.rs  mod.rs  shared.rs  wasm.rs  wrapper.rs
cli/src/release/: bundle.rs  compress.rs  env_utls.rs  mod.rs  paths.rs
crates/bufread/: Cargo.toml
crates/bufread/tests/: proto.rs  proto_tests.rs  reader_proptest.rs
crates/cli/: CHANGELOG.md  Cargo.toml  README.md
crates/cli/src/: main.rs
crates/core/dlt-tools/: Cargo.toml
crates/core/merging/: Cargo.toml
crates/core/parsers/: Cargo.toml
crates/core/plugins_host/: Cargo.toml
crates/core/processor/: Cargo.toml
crates/core/session/: Cargo.toml
crates/core/sources/: Cargo.toml
crates/core/text_grep/: Cargo.toml
crates/dir_checksum/: Cargo.toml
crates/dir_checksum/src/: hash_digest.rs
crates/mcp/: Cargo.toml
crates/mcp/src/: errors.rs
crates/stypes/: Cargo.toml
crates/stypes/src/: lib.rs
dlt/: Cargo.toml
dlt/benches/: dlt_benchmarks.rs
dlt/src/: dlt.rs  dlt_parse.rs  dlt_tokio.rs  filtering.rs  lib.rs
dlt/src/tests/: dlt_parse_tests.rs  mod.rs
indexer_base/: Cargo.toml
indexer_base/src/: chunks.rs  config.rs  error_reporter.rs  lib.rs  timedline.rs  utils.rs
indexer_base/src/tests/: mod.rs  utils_tests.rs
indexer_cli/: Cargo.toml
indexer_cli/src/: main.rs
plugins/examples/dlt_parser/: Cargo.toml  README.md  bench_config.toml  dlt_parser.toml
plugins/examples/file_producer/: Cargo.toml  README.md  file_producer.toml
plugins/examples/string_parser/: Cargo.toml  bench_config.toml  string_parser.toml
plugins/plugins_api/: Cargo.toml  README.md
plugins/plugins_api/src/: lib.rs
plugins/plugins_api/tests/: .gitignore  bytesource.rs  parser.rs  producer.rs
plugins/templates/producer_template/: Cargo.toml  README.md  metadata.toml
processor/: Cargo.toml
processor/benches/: parse_benchmarks.rs
processor/src/: lib.rs  parse.rs  processor.rs
processor/src/tests/: parse_tests.rs  processor_tests.rs
(+7485 files in other folders)
