[package]
name = "logviewer_parser"
version = "0.23.0"
authors = ["Oliver Mueller <oliver.mueller@esrlabs.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3"
bytes = "0.4"
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
failure = "0.1.5"
chrono = "0.4"
nom = "5.0.0-beta2"
clap = "2"
tokio = "0.1.21"
log = "0.4.6"
buf_redux = "0.8.1"

[dev-dependencies]
rand = "0.6.5"
pretty_assertions = "0.6.1"
tempdir = "0.3"
test-generator = "0.2.2"
proptest = "0.9.4"
proptest-derive = "0.1.2"
