[package]
name = "cargo-chipmunk"
version = "0.2.11"
authors = ["Ammar Abou Zor <ammar.abou.zor@accenture.com>"]
edition = "2021"
description = "CLI Tool for chipmunk application development"
documentation = "README.md"
readme = "README.md"

[workspace]
members = ["dir_checksum"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
tempdir = "0.3"
anyhow = "1.0.80"

[dependencies]
anyhow.workspace = true
clap = { version = "4.4.4", features = ["derive"] }
console = "0.15.7"
fs_extra = "1.3.0"
futures = "0.3.28"
git2 = { version = "0.18.2", default-features = false }
indicatif = "0.17.8"
tokio = { version = "1.36.0", features = ["full"] }
tokio-util = { version = "0.7.11", features = ["rt"] }
dir_checksum = { path = "./dir_checksum" }
clap_complete = "4.5"
dotenvy = "0.15"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
glob = "0.3"
toml = "0.8"
dirs = "5.0"

[dev-dependencies]
tempdir.workspace = true

[[test]]
name = "dir_checksum"
path = "dir_checksum/tests/integration_tests.rs"
