[package]
name = "dlt"
version = "0.1.0"
authors = ["Oliver Mueller <oliver.mueller@esrlabs.com>"]
edition = "2018"

[dependencies]
bytes = "0.4"
lazy_static = "1.3.0"
byteorder = "1.3"
buf_redux = "0.8.1"
failure = "0.1.5"
chrono = "0.4"
nom = "5.0"
log = "0.4.6"
proptest = "0.9.4"
proptest-derive = "0.1.2"
indexer_base = { path = "../indexer_base" }

[dev-dependencies]
rand = "0.7"
pretty_assertions = "0.6"

[features]
nightly = []