[package]
name = "indexer_base"
version = "0.1.0"
authors = ["Oliver Mueller <oliver.mueller@esrlabs.com>"]
edition = "2018"

[dependencies]
regex = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
buf_redux = "0.8.1"
failure = "0.1.5"
humantime = "1.2"

[dev-dependencies]
tempdir = "0.3"
test-generator = "0.2.2"
pretty_assertions = "0.6"