[package]
name = "bufread"
version.workspace = true
edition.workspace = true

[lints]
workspace = true 

[dependencies]

[dev-dependencies]
criterion.workspace = true
proptest.workspace = true
rand.workspace = true

[[bench]]
name = "buffer_benches"
harness = false

[[bench]]
name = "reader_benches"
harness = false
