[package]
name = "cli"
version = "0.2.2"
authors = ["Ammar Abou Zor <ammar.abou.zor@accenture.com>"]
edition = "2024"
description = "CLI Tool for parsing bytes form different source supporting multiple data formats"
documentation = "README.md"
readme = "README.md"

[[bin]]
name = "chipmunk-cli"
path = "src/main.rs"

[dependencies]
# Internal crates
parsers.workspace = true
sources.workspace = true
processor.workspace = true

# External crates
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
futures.workspace = true
tokio-util.workspace = true
