[package]
name = "dir_checksum"
version = "0.1.0"
authors = ["Ammar Abou Zor <ammar.abou.zor@accenture.com>"]
edition = "2024"
description = "A Library which provides methods to calculate the checksum of the files in a given path recursively considering `gitignore` rules"

[dependencies]
# External crates
blake3 = { workspace = true, features = ["rayon"] }
ignore.workspace = true
memmap2.workspace = true
rayon.workspace = true
thiserror.workspace = true
log.workspace = true

[dev-dependencies]
# External crates
tempdir.workspace = true
anyhow.workspace = true
pretty_assertions.workspace = true
