[package]
name = "mcp"
edition.workspace = true
version.workspace = true
authors.workspace = true

[dependencies]
axum = { version = "0.7", features = ["macros"] }
non-exhaustive = "0.1.1"
ollama-rs = { version = "0.3", features = ["stream"] }
rand = "0.9"
reqwest = { version = "0.12.25", features = ["json"] }
rmcp = { version = "1.3", features = [
  "client",
  "macros",
  "reqwest",
  "schemars",
  "server",
  "transport-io",
  "transport-streamable-http-client-reqwest",
  "transport-streamable-http-server",
  "transport-streamable-http-server-session",
  "tower",
] }
schemars = "1.1"
url = { version = "2.5", features = ["serde"] }

anyhow.workspace = true
log.workspace = true
processor.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
