[package]
name = "stypes"
description = "Shared types"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
# External crates
serde = { workspace = true, features = ["derive"] }
dlt-core = { workspace = true, features = ["fibex", "statistics", "serialization"] }
uuid = { workspace = true, features = ["serde", "v4"] }
tokio.workspace = true
thiserror.workspace = true
walkdir.workspace = true
anyhow.workspace = true
