[workspace]

[package]
name = "plugins_api"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4"
wit-bindgen = "0.41"
# TODO AAZ: This is needed to provide async interface for functions.
# Ensure this is still needed when plugins are fully implemented.
wit-bindgen-rt = "0.41"
# This is needed only for the async case because holding the lock of std Mutex
# across await calls is unsound.
futures = {version = "0.3", optional = true}

[dev-dependencies]
trybuild = "1.0"

[features]
default = []
parser =[]
bytesource = []
producer = ["parser", "dep:futures"]

[[test]]
name = "parser"
required-features = ["parser"]

[[test]]
name = "bytesource"
required-features = ["bytesource"]

[[test]]
name = "producer"
required-features = ["producer"]

[package.metadata.docs.rs]
# Activate all features when generating the code on docs.rs
all-features = true
# Activate the banner on docs explaining that the items is only available 
# with specific feature 
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.component]
target = { path = "wit" }
