[workspace]
resolver = "3"

members = [
  "addons/dlt-tools",
  "addons/someip-tools",
  "addons/file-tools",
  "addons/text_grep",
  "addons/bufread",
  "indexer_base",
  "merging",
  "mcp",
  "parsers",
  "plugins_host",
  "processor",
  "session",
  "sources",
  "stypes",
]

[workspace.dependencies]
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
lazy_static = "1.5"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
dlt-core = "0.20"
crossbeam-channel = "0.5"
futures = "0.3"
tokio-util = "0.7"
regex = "1"
grep-regex = "0.1"
rand = "0.9"
dirs = "6.0"
uuid = "1.3"
grep-searcher = "0.1"
tempfile = "3.14"
env_logger = "0.11"
walkdir = "2.5"
envvars = "0.1"
anyhow = "1.0"
toml = "0.8"
blake3 = "1.8"

## Development Dependencies ##
# Support for `html_reports` needs running the benchmarks via `cargo-criterion` tool.
criterion = { version = "0.5", features = ["html_reports"] }
insta = { version = "1.41", features = ["yaml"] }
proptest = "1.6"

[workspace.lints.clippy]
undocumented_unsafe_blocks = "deny"

# `insta` crate and its dependency `similar` will be compiled once and run many times, 
# therefore it's suggested to compile them with more optimizations for faster runs.
[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

# Proptest and its random number generator can be CPU intensive, therefore setting their optimizations level 
# to max will have significant performance improvement for the tests.
[profile.test.package.proptest]
opt-level = 3

[profile.test.package.rand_chacha]
opt-level = 3

# only uncomment when profiling
# [profile.release]
# debug = true
