[package]
name = "dlt-tools"
version.workspace = true
edition.workspace = true

[lints]
workspace = true 

[dependencies]
# Internal crates
indexer_base.workspace = true
parsers.workspace = true
sources.workspace = true
processor.workspace = true

# External crates
dlt-core.workspace = true
log.workspace = true
tokio = { workspace = true , features = ["full"] }
tokio-util = { workspace = true, features = ["codec", "net"] }

[dev-dependencies]
