[package]
name = "merging"
authors = ["Oliver Mueller <oliver.mueller@esrlabs.com>"]
version.workspace = true
edition.workspace = true

[lints]
workspace = true 

[dependencies]
# External crates
log.workspace = true
serde = { workspace = true , features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
