[package]
name = "parsers"
version.workspace = true
edition.workspace = true

[lints]
workspace = true 

[dependencies]
# Internal crates
someip-tools.workspace = true

# External crates
byteorder.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
dlt-core = { workspace = true, features = ["serialization", "fibex"] }
lazy_static.workspace = true
log.workspace = true
regex.workspace = true
memchr.workspace = true
serde = { workspace = true , features = ["derive"] }
thiserror.workspace = true
rand.workspace = true
someip-messages.workspace = true
someip-payload.workspace = true

[dev-dependencies]
stringreader.workspace = true
