[package]
name = "plugins_host"
version.workspace = true
edition.workspace = true

[lints]
workspace = true 

[dependencies]
# Internal crates
parsers.workspace = true
stypes.workspace = true
dir_checksum.workspace = true

# External crates
tokio.workspace = true
thiserror.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
log.workspace = true
dirs.workspace = true
toml.workspace = true
blake3.workspace = true
rand.workspace = true
wasmtime.workspace = true
wasmtime-wasi.workspace = true

[dev-dependencies]
processor.workspace = true
criterion = { workspace = true, features = ["async_tokio"] }

[[bench]]
name = "plugin_parser_init"
harness = false

