[package]
name = "processor"
authors = ["esrlabs.com"]
version.workspace = true
edition.workspace = true

[lints]
workspace = true 

[dependencies]
# Internal crates
bufread.workspace = true
indexer_base.workspace = true
parsers.workspace = true
sources.workspace = true
text_grep.workspace = true
stypes.workspace = true

# External crates
bincode.workspace = true
bytecount.workspace = true
futures.workspace = true
grep-regex.workspace = true
grep-searcher.workspace = true
itertools.workspace = true
lazy_static.workspace = true
log.workspace = true
regex.workspace = true
serde = { workspace = true , features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio-util.workspace = true

[dev-dependencies]
# Internal crates
plugins_host.workspace = true

# External crates
criterion = { workspace = true, features = ["async_tokio"] }
pretty_assertions.workspace = true
rand.workspace = true
tempfile.workspace = true
tokio.workspace = true
toml.workspace = true

[[bench]]
name = "map_benchmarks"
harness = false

[[bench]]
name = "dlt_producer"
harness = false

[[bench]]
name = "someip_producer"
harness = false

[[bench]]
name = "someip_legacy_producer"
harness = false

[[bench]]
name = "text_producer"
harness = false

[[bench]]
name = "plugin_praser_producer"
harness = false

[[bench]]
name = "mocks_once_producer"
harness = false

[[bench]]
name = "mocks_once_parallel"
harness = false

[[bench]]
name = "mocks_multi_producer"
harness = false

[[bench]]
name = "mocks_multi_parallel"
harness = false
