[package]
name = "sources"
authors = ["esrlabs.com"]
version.workspace = true
edition.workspace = true

[lints]
workspace = true 

[dependencies]
bufread.workspace = true
bytes = "1.3"
etherparse = "0.16"
futures.workspace = true
log.workspace = true
pcap-parser = "0.16"
thiserror.workspace = true
tokio.workspace = true
tokio-serial = "5.4"
tokio-stream.workspace = true
tokio-util = { workspace = true , features = ["full"] }
serde = { workspace = true, features = ["derive"] }
uuid = { workspace = true , features = ["serde", "v4"] }
stypes.workspace = true
socket2 = "0.5.8"

[target.'cfg(windows)'.dependencies]
shell-tools.workspace = true

[dev-dependencies]
env_logger.workspace = true
