[package]
name = "text_grep"
version.workspace = true
edition.workspace = true

[lib]
name = "text_grep"
crate-type = ["lib"]
path = "src/lib.rs"

[lints]
workspace = true 

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# Internal crates
bufread.workspace = true

# External crates
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
grep-searcher.workspace = true
grep-regex.workspace = true
thiserror.workspace = true
regex.workspace = true

[dev-dependencies]
# External crates
tempfile.workspace = true
