[workspace]

[package]
name = "file_producer"
version = "0.1.0"
edition = "2021"
authors = ["Ammar Abou Zor <ammar.abou.zor@accenture.com>"]
description = "An example of a Chipmunk producer plugins opening a text file and returning its content line by line"

[dependencies]
plugins_api = {path = "../../plugins_api", features = ["producer"]}

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:file-producer"
