[workspace]

[package]
name = "string_parser"
version = "0.1.0"
edition = "2024"
authors = ["Ammar Abou Zor <ammar.abou.zor@accenture.com>"]
description = "An example of a Chipmunk parser that parses the bytes into valid UTF-8 strings line by line"

[dependencies]
plugins_api = {path = "../../plugins_api", features = ["parser"]}
memchr = "2.7"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:string-parser"
